2018_2_객프/11_Exam_2/2018_2_exam2(월수)/compiling_error.txt
/Users/parkjungjin/C++/2018_2_객프/11_Exam_2/exam2(월수)/2_1.cpp:16:30: error: a space is required between consecutive right angle brackets (use '> >')
  std::vector<std::vector<int>> table(row,std::vector<int>(col+1));
                             ^~
                             > >
1 error generated.
